$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Sep-2011 Jean-Marie Simonet
 $ Updating installation ini files: af-ZA, bs-BA, da-DK, de-DE, el-GR, fr-FR, hr-HR, lv-LV, mk-MK, nb-NO, nn-NO, sk-SK, sv-SE, sy-IQ, uk-UA
 $ Updating installation ini files: be-BY, hu-HU, sr-RS, sr-YU
 # [#26356] Users can lock everyone out of the administrator. Thanks Irfan and Elin.
 
12-Sep-2011 Jean-Marie Simonet
 # [#26753] Login description containing markup displayed regardless of presence of content
 # [#26766] Modules should be able to be saved with no position. Thanks Elin.

10-Sep-2011 Jean-Marie Simonet
 # [#24310] Users Manager Log In Form Required Field Indicator. Thanks Bill
 
08-Sep-2011 Christophe Demko
 # [#26609] Template manager missing toolbar icons
 # [#26502] untranslated string from *.xml
 # [#26644] Trash option available while viewing trashed items

07-Sep-2011 Mark Dexter
 # [#25307] Improper datatypes in database
 # [#26691] Sync more changes from platform 11.2
 # [#26474] Remove unused view file in com_installer

06-Sep-2011 Christophe Demko
 # [#26694] Catchable fatal error: Object of class DateTimeZone could not be converted to string

06-Sep-2011 Jean-Marie Simonet
# [#25761] wasted space by images / javascript source files. Fixed images. Thanks Marius
# [#26717] Multi-language site, setting new user language always to default

05-Sep-2011 Jean-Marie Simonet
 #Correcting wrong formatting of mod_articles_category.xml
 
04-Sep-2011 Christophe Demko
 # [#26701] com_content Form View $article object that does not exist in the _prepareDocument method on line 115. (Jean-Marie Simonet)
 # [#26710] Clean up admin and installation CSS (Rouven Weßling)
 # [#26518] Menus caching issue (Dennis Hermatski)
 # [#26682] Typo in sample data (Marijke Stuivenberg, Kevin Griffiths)

03-Sep-2011 Christophe Demko
 # [#26706] No translation when adding extra quick icons (Rune Sjøen)

02-Sep-2011 Christophe Demko