@@ -598,7 +598,14 @@
 				<option value="1">JSHOW</option>
 
 			</field>
-
+			<field name="initial_sort" type="list"
+				description="COM_CONTACT_FIELD_INITIAL_SORT_DESC"
+				label="COM_CONTACT_FIELD_INITIAL_SORT_LABEL"
+			>
+				<option value="name">COM_CONTACT_FIELD_VALUE_NAME</option>
+				<option value="sortname">COM_CONTACT_FIELD_VALUE_SORT_NAME</option>
+				<option value="ordering">COM_CONTACT_FIELD_VALUE_ORDERING</option>
+			</field>
 	</fieldset>
 
 	<fieldset name="Contact_Form"
