@@ -130,6 +130,8 @@ COM_CONTACT_FIELD_INFORMATION_TELEPHONE_DESC="Contact's Telephone"
 COM_CONTACT_FIELD_INFORMATION_TELEPHONE_LABEL="Telephone"
 COM_CONTACT_FIELD_INFORMATION_WEBPAGE_DESC="Contact's Website"
 COM_CONTACT_FIELD_INFORMATION_WEBPAGE_LABEL="Website"
+COM_CONTACT_FIELD_INITIAL_SORT_DESC="Choose the field or fields by which contacts will be sorted."
+COM_CONTACT_FIELD_INITIAL_SORT_LABEL="Sort by"
 COM_CONTACT_FIELD_LANGUAGE_DESC="Assign a language for this contact"
 COM_CONTACT_FIELD_LIMIT_BOX_DESC="Show/Hide limit box"
 COM_CONTACT_FIELD_LIMIT_BOX_LABEL="Limit box"
@@ -207,10 +209,13 @@ COM_CONTACT_FIELD_SORTNAME2_LABEL="Second Sort Field"
 COM_CONTACT_FIELD_SORTNAME3_DESC="The part of the name to use as the third sort field"
 COM_CONTACT_FIELD_SORTNAME3_LABEL="Third Sort Field"
 COM_CONTACT_FIELD_VALUE_ICONS="Icons"
+COM_CONTACT_FIELD_VALUE_NAME="Name"
 COM_CONTACT_FIELD_VALUE_NO_LINK="Show Without Link"
 COM_CONTACT_FIELD_VALUE_NONE="None"
+COM_CONTACT_FIELD_VALUE_ORDERING="Ordering"
 COM_CONTACT_FIELD_VALUE_PLAIN="Plain"
 COM_CONTACT_FIELD_VALUE_SLIDERS="Sliders"
+COM_CONTACT_FIELD_VALUE_SORT_NAME="Sort Name"
 COM_CONTACT_FIELD_VALUE_TABS="Tabs"
 COM_CONTACT_FIELD_VALUE_TEXT="Text"
 COM_CONTACT_FIELD_VALUE_WITH_LINK="Show With Link"
