@@ -67,6 +67,9 @@ class ContactModelCategory extends JModelList
 				'state', 'a.state',
 				'country', 'a.country',
 				'ordering', 'a.ordering',
+				'sortname1', 'a.sortname1',
+				'sortname2', 'a.sortname2',
+				'sortname3', 'a.sortname3'
 			);
 		}
 
@@ -145,8 +148,26 @@ class ContactModelCategory extends JModelList
 		}
 
 		// Add the list ordering clause.
-		$query->order($db->getEscaped($this->getState('list.ordering', 'a.ordering')).' '.$db->getEscaped($this->getState('list.direction', 'ASC')));
+		$app	= JFactory::getApplication();
+		$params	= JComponentHelper::getParams('com_contact');
 
+		$menuParams = new JRegistry;
+
+		if ($menu = $app->getMenu()->getActive()) {
+			$menuParams->loadJSON($menu->params);
+		}
+
+		$mergedParams = clone $params;
+		$mergedParams->merge($menuParams);
+
+		if ($mergedParams->get('initial_sort') != 'sortname'){
+			$query->order('a.'.$mergedParams->get('initial_sort'));
+		}
+		else {
+			$query->order('a.sortname1');
+			$query->order('a.sortname2');
+			$query->order('a.sortname3');
+		}
 		return $query;
 	}
 
@@ -251,7 +272,7 @@ class ContactModelCategory extends JModelList
 	}
 
 	/**
-	 * Get the parent categorie.
+	 * Get the parent category.
 	 *
 	 * @param	int		An optional category id. If not supplied, the model state 'category.id' will be used.
 	 *
