@@ -227,6 +227,16 @@
 
 			</field>
 
+			<field name="initial_sort" type="list"
+				description="COM_CONTACT_FIELD_INITIAL_SORT_DESC"
+				label="COM_CONTACT_FIELD_INITIAL_SORT_LABEL"
+			>
+				<option value="">JGLOBAL_USE_GLOBAL</option>
+				<option value="name">COM_CONTACT_FIELD_VALUE_NAME</option>
+				<option value="sortname">COM_CONTACT_FIELD_VALUE_SORT_NAME</option>
+				<option value="ordering">COM_CONTACT_FIELD_VALUE_ORDERING</option>
+			</field>
+
 
 </fieldset>
 
